# specstory-cloud-sdk-python

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
examples/: async_usage.py  basic_usage.py  caching.py  chat_analytics.py  chat_extractor.py  developer_experience.py  devmemory.py  error_handling.py  performance.py  python-sdk-output.txt  quickstart.py
scripts/: generate_types.py
specstory/: __init__.py  _cache.py  _constants.py  _errors.py  _http.py  client.py  py.typed  types.py  types_generated.py
specstory/resources/: __init__.py  _base.py  graphql.py  projects.py  sessions.py
tests/: conftest.py
tests/unit/: test_client.py  test_graphql.py  test_projects.py  test_sessions.py  test_simple_projects.py
